# Kournal

./: .gitignore  CMakeLists.txt  Kournal.kdev4  README.md
.kdev4/: Kournal.kdev4  _custom.kdev4
cmake/find/: FindCapnProto.cmake
cmake/include/: GitRepo.cmake
developement/: Qt Creator License Header.txt
i18n/: .gitignore  CMakeLists.txt  README.md  pl_PL.ts  update.py.in
src/: CMakeLists.txt  Static.cpp  Static.hpp  config-dev.hpp.in  config-i18n.hpp.in  config.h.in  config.hpp.in  main.cpp
src/model/: Document.capnp
src/model/bookmark/: Bookmark.capnp
src/model/formats/kbj/: kbj.capnp
src/model/journal/: CMakeLists.txt  Common.capnp  Journal.capnp
src/model/journal/bookmark/: Bookmark.capnp
src/model/journal/document/: Document.capnp  DocumentCommon.capnp
src/model/journal/page/: Background.capnp  Object.capnp
src/model/journal/tab/: TabCommon.capnp
src/model/layer/: Layer.capnp
src/model/page/: Page.capnp
src/model/resource/: Resource.capnp
src/model/settings/: SettingsHandler.cpp  SettingsHandler.hpp
src/model/tab/: .directory  DocumentTab.capnp
src/ui/: CMakeLists.txt  KournalWindow.cpp  KournalWindow.hpp  KournalWindow.ui  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui  WelcomeWidget.cpp  WelcomeWidget.hpp  WelcomeWidget.ui
ui/: CMakeLists.txt
